fix(discourse): align tip action with post controls

--- a/fiber-link-discourse-plugin/assets/stylesheets/common/fiber-link.scss
+++ b/fiber-link-discourse-plugin/assets/stylesheets/common/fiber-link.scss
@@ -38,7 +38,7 @@
   border: 0;
 }
 
-.fiber-link-tip-entry__button.fiber-link-tip-button--icon-only {
+.post-action-menu__fiber-link-tip.fiber-link-tip-button--icon-only {
   border-radius: 999px;
 }
 
